# pod0

./: .gitignore  .gitmodules  .package.resolved  .tool-versions  .xcode-build-version  AGENTS.md  Cargo.toml  Project.swift  README.md  Tuist.swift  WIP.md  justfile
rust/: Cargo.toml  FACADE_CONTRACT.md  LISTENING_DOMAIN_V1.md  README.md  SCHEMA_MIGRATIONS.md  deny.toml  uniffi.toml
rust/apple/: Pod0CoreFFI.modulemap  Pod0CoreFFI.xcframework.Info.plist
rust/crates/pod0-application/: Cargo.toml
rust/crates/pod0-application/src/: agent_action_hash.rs  agent_contract.rs  agent_generated_audio.rs  agent_history_contract.rs  agent_history_import.rs  agent_model_usage_tests.rs  agent_policy.rs  agent_policy_shape.rs  agent_provider_output.rs  agent_provider_output_tests.rs  agent_run_contract.rs  agent_tool_catalog.rs  agent_tool_names.rs  agent_workflow.rs  agent_workflow_compatibility_tests.rs  agent_workflow_continuation.rs  agent_workflow_recovery.rs  agent_workflow_tests.rs  agent_workflow_values.rs  chapter_contract.rs  chapter_contract_fixture_tests.rs  chapter_contract_tests.rs  chapter_model_host.rs  chapter_model_policy.rs  chapter_model_policy_fixture_tests.rs  chapter_model_policy_prompt.rs  chapter_model_policy_prompt_tests.rs  chapter_model_policy_source.rs  chapter_model_policy_tests.rs  chapter_model_policy_version.rs  chapter_model_policy_version_tests.rs  chapter_model_workflow.rs  chapter_model_workflow_tests.rs  chapter_observation.rs  chapter_observation_agent.rs  chapter_observation_agent_tests.rs  chapter_observation_model.rs  chapter_observation_model_tests.rs  chapter_observation_publisher.rs  chapter_observation_publisher_tests.rs  (+67 more)
rust/crates/pod0-domain/: Cargo.toml
rust/crates/pod0-domain/src/: chapter_artifact.rs  chapter_artifact_hash.rs  chapter_artifact_tests.rs  chapter_artifact_validation.rs  chapter_playback_policy.rs  chapter_playback_policy_tests.rs  clips.rs  download_identity.rs  knowledge.rs  knowledge_artifact.rs  knowledge_artifact_hash.rs  knowledge_identity.rs  lib.rs  listening.rs  listening_completion_tests.rs  listening_error.rs  listening_policy.rs  listening_tests.rs  memories.rs  notes.rs  playback_policy.rs  playback_policy_tests.rs  publication.rs  recall_configuration.rs  signer.rs  transcript_artifact.rs  transcript_artifact_hash.rs  transcript_artifact_tests.rs  transcript_artifact_validation.rs  transcript_command.rs
rust/crates/pod0-facade/: Cargo.toml
rust/crates/pod0-facade/src/: agent_history_cutover.rs  agent_history_cutover_mapping.rs  agent_history_cutover_tests.rs  agent_history_cutover_types.rs  chapter_migration.rs  chapter_migration_mapping.rs  chapter_migration_tests.rs  chapter_observation_facade.rs  clip_migration.rs  contract_facade.rs  download_cutover.rs  download_cutover_types.rs  facade_contract_tests.rs  facade_exports.rs  kernel_probe_facade.rs  lib.rs  listening_migration.rs  listening_migration_error.rs  memory_cutover.rs  memory_cutover_types.rs  model_chapter_cutover.rs  model_chapter_cutover_discard_tests.rs  model_chapter_cutover_success_tests.rs  model_chapter_cutover_tests.rs  model_chapter_cutover_types.rs  note_migration.rs  runtime.rs  runtime_agent_command_fingerprint.rs  runtime_agent_commands.rs  runtime_agent_context_tests.rs  runtime_agent_continuation_tests.rs  runtime_agent_generated_audio.rs  runtime_agent_generated_audio_tests.rs  runtime_agent_history_tests.rs  runtime_agent_identity.rs  runtime_agent_internal.rs  runtime_agent_internal_helpers.rs  runtime_agent_modules.rs  runtime_agent_observation_failure.rs  runtime_agent_observation_values.rs  (+171 more)
rust/crates/pod0-nmp/: Cargo.toml
rust/crates/pod0-nmp/src/: lib.rs  publication.rs  signer.rs  status.rs  tests.rs
rust/crates/pod0-recall-index/: Cargo.toml
rust/crates/pod0-recall-index-spike/: Cargo.toml
rust/crates/pod0-recall-index-spike/src/: lib.rs  model.rs  query.rs  schema.rs  store.rs  tests.rs
rust/crates/pod0-recall-index/src/: cache.rs  cancellation_tests.rs  identity.rs  lib.rs  migration.rs  migration_tests.rs  model.rs  query.rs  readiness.rs  recovery_tests.rs  schema.rs  store.rs  store_write.rs  tests.rs
rust/crates/pod0-storage/: Cargo.toml
rust/crates/pod0-storage/src/: agent_generated_audio_store.rs  agent_generated_audio_store_tests.rs  agent_history_cutover.rs  agent_history_cutover_model.rs  agent_history_cutover_read.rs  agent_history_cutover_validation.rs  agent_store.rs  agent_store_codec.rs  agent_store_history.rs  agent_store_model.rs  agent_store_recovery.rs  agent_store_tests.rs  backup.rs  chapter_authority.rs  chapter_import.rs  chapter_import_commit.rs  chapter_import_discard.rs  chapter_import_evidence_tests.rs  chapter_import_failure_tests.rs  chapter_import_identity_verification.rs  chapter_import_model.rs  chapter_import_recovery_tests.rs  chapter_import_source_tests.rs  chapter_import_store_read.rs  chapter_import_store_rows.rs  chapter_import_store_write.rs  chapter_import_test_support.rs  chapter_import_tests.rs  chapter_import_verification.rs  chapter_legacy_backup.rs  chapter_store_codec.rs  (+250 more)
rust/crates/uniffi-bindgen/: Cargo.toml
rust/schema/migrations/: 0001_kernel_metadata.sql  0002_migration_journal.sql  0003_domain_cutovers.sql  0004_listening_import.sql  0005_library_runtime.sql  0006_playback_runtime.sql  0007_evidence_artifacts.sql  0008_notes.sql  0009_clips.sql  0010_transcript_artifacts.sql  0011_retained_library_artifacts.sql  0012_complete_transcript_history.sql  0013_chapter_artifacts.sql  0014_chapter_authority.sql  0015_chapter_publisher_workflows.sql  0016_chapter_model_workflows.sql  0017_model_chapter_completion_history.sql  0018_recall_configuration.sql  0019_download_workflows.sql  0020_transcript_workflows.sql  0021_scheduled_agent_workflows.sql  0022_scheduled_agent_cutover_evidence.sql  0023_agent_turns.sql  0024_agent_generated_audio.sql  0025_nmp_publications.sql  0026_nostr_signer_state.sql  0027_agent_history_cutover.sql  0028_agent_memories.sql  0029_feed_discoveries.sql  0029_subscription_transcript_policy.sql  0030_feed_discovery_workflows.sql
(+1464 files in other folders)
