[workspace]
resolver = "2"
members = [
    "crates/pod0-domain",
    "crates/pod0-application",
    "crates/pod0-storage",
    "crates/pod0-recall-index",
    "crates/pod0-nmp",
    "crates/pod0-facade",
    "crates/uniffi-bindgen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
publish = false

[workspace.dependencies]
pod0-domain = { path = "crates/pod0-domain", version = "=0.1.0" }
pod0-application = { path = "crates/pod0-application", version = "=0.1.0" }
pod0-storage = { path = "crates/pod0-storage", version = "=0.1.0" }
pod0-recall-index = { path = "crates/pod0-recall-index", version = "=0.1.0" }
nmp = { git = "https://github.com/pablof7z/nmp.git", rev = "68310f88a31bf80e6b73d018b1374e73efda0041", version = "=0.1.0" }
libc = { version = "=0.2.186" }
rusqlite = { version = "=0.39.0", default-features = false, features = ["backup", "bundled"] }
quick-xml = { version = "=0.41.0" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150" }
sha2 = { version = "=0.10.9" }
sqlite-vec = { version = "=0.1.9" }
tempfile = { version = "=3.27.0" }
time = { version = "=0.3.47", features = ["formatting", "parsing"] }
uniffi = { version = "=0.32.0" }
unicode-segmentation = { version = "=1.12.0" }
url = { version = "=2.5.7" }
