[package]
name = "pod0-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pod0-domain.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
uniffi.workspace = true
unicode-segmentation.workspace = true
url.workspace = true

[lib]
path = "src/lib.rs"
