[package]
name = "pod0-facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pod0-application.workspace = true
pod0-domain.workspace = true
pod0-storage.workspace = true
sha2.workspace = true
uniffi.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]
