[package]
name = "pod0-facade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pod0-application.workspace = true
pod0-domain.workspace = true
pod0-nmp = { path = "../pod0-nmp", version = "=0.1.0" }
pod0-recall-index.workspace = true
pod0-storage.workspace = true
sha2.workspace = true
serde_json.workspace = true
uniffi.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]
