[package]
name = "pod0-nmp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nmp.workspace = true
nostr.workspace = true
pod0-application.workspace = true
pod0-domain.workspace = true
sha2.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tungstenite.workspace = true
