[package]
name = "pod0-recall-index-spike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
libc.workspace = true
pod0-application.workspace = true
pod0-domain.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pod0-recall-index-benchmark"
path = "src/bin/benchmark.rs"
