[package]
name = "pod0-recall-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
libc.workspace = true
pod0-application.workspace = true
pod0-domain.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
tempfile.workspace = true

[dev-dependencies]
rusqlite = { workspace = true, features = ["hooks"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "pod0-recall-index-benchmark"
path = "src/bin/benchmark.rs"
