[package]
name = "pod0-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pod0-domain.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
pod0-application.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"
